# cmake_getting_started

./: .gitignore  .gitmodules  Readme.md
01_basic_of_compiler/: Readme.md  hello.cpp
01_basic_of_compiler/include/: happy.h
02_basic_of_cmake/: CMakeLists.txt  Readme.md  main.cpp
02_basic_of_cmake/practice/: CMakeLists.txt  happy.cpp
03_simple_features/: Readme.md
04_library_linking/lib_link/: CMakeLists.txt  main.cpp
05_external_library/example_coost/: CMakeLists.txt  main.cpp
05_external_library/example_json/: CMakeLists.txt
05_external_library/practice_sort/: main.cpp
06_fetch_content/example_json/: CMakeLists.txt  main.cpp
