cmake_minimum_required(VERSION 3.10)
project(HAPPY_CMAKE)

#${CMAKE_CURRENT_SOURCE_DIR} #=> Current CMake file location

#message(SOMETHING) #=> print message during configuration

#set(variable_name content) #=> Variable allocation

#add_executable(target_name file1.cpp file2.cpp) #=> compile target file

#target_include_directories(target_name PUBLIC include_directory) #=> include directory setting